--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@mantine/core": "^7.0.2",
     "@mantine/form": "^7.0.2",
     "@mantine/hooks": "^7.0.2",
+    "@tanstack/react-query": "^4.35.7",
+    "@tanstack/react-query-devtools": "^4.35.7",
+    "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
